# AlignScopeV1

./: CHANGELOG.md  Dockerfile  LICENSE  MOTIVATION.md  README.md  epymarl_err.txt  pyproject.toml
.github/workflows/: publish.yml
alignscope/: __init__.py  adapters.py  cli.py  detector.py  metrics.py  sdk.py  server.py  simulator.py
alignscope/integrations/: __init__.py  mlflow_bridge.py  wandb_bridge.py
alignscope/patches/: __init__.py  pettingzoo.py  pymarl.py  rllib.py
examples/: pettingzoo_example.py  test_butterfly.py  test_classic_games.py  test_competitive.py  test_cooperative.py  test_ctde.py  test_epymarl.py  test_kaz.py  test_log_replay.py  test_mean_field.py  test_mixed_interest.py  test_mpe.py  test_mpe_suite.py  test_rllib.py  test_sisl.py  test_smac.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  metrics.js  timeline.js  topology.js
