[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alignscope"
version = "0.1.0"
description = "Real-time alignment observability for multi-agent reinforcement learning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Nithisha", email = "nithisha2201@gmail.com" },
]
keywords = ["marl", "multi-agent", "reinforcement-learning", "alignment", "observability", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
rllib = ["ray[rllib]>=2.0"]
pettingzoo = ["pettingzoo>=1.22"]
pymarl = []  # PyMARL is typically installed from source
wandb = ["wandb>=0.15"]
mlflow = ["mlflow>=2.0"]
all = ["ray[rllib]>=2.0", "pettingzoo>=1.22", "wandb>=0.15", "mlflow>=2.0"]
dev = ["pytest", "httpx"]

[project.scripts]
alignscope = "alignscope.cli:main"

[project.urls]
Homepage = "https://github.com/raghavarajunithisha-lab/AlignScopeV1"
Documentation = "https://github.com/raghavarajunithisha-lab/AlignScopeV1#readme"
Repository = "https://github.com/raghavarajunithisha-lab/AlignScopeV1"

[tool.hatch.build.targets.wheel]
packages = ["alignscope"]

[tool.hatch.build.targets.wheel.force-include]
"frontend" = "alignscope/_frontend"
